--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@ const questions = [
 
 /* 11 */ {q:"この図のように警察官が腕を横に水平に上げているときは、矢印の交通に対しては、信号機の赤と同じ意味である。",img:"images/q11.png",a:false,e:"信号機の青と同じ意味です。"},
 /* 12 */ {q:"この図のような警察官の灯火による信号は、矢印の方向の交通に対しては、黄色の灯火の信号と同じ意味である。",img:"images/q12.png",a:false,e:"信号機の赤と同じ意味です。"},
-/* 13 */ {q:"踏切の中で車が止まってしまい、車を踏切の外へ車を移動するときは、マニュアル車（クラッチスタートシステム装着車を除く）はクラッチを踏まないでギアをローかセカンドに入れ、セルモーターを回して移動する方法がある。",a:true,e:"問題文の通りです。"},
-/* 14 */ {q:"チャイルドシートを助手席で使用するときは、シートを一番後ろまで引き、前向きに取り付けるようにする。",a:true,e:"問題文の通りです。"},
-/* 15 */ {q:"最大積載量2トンの貨物自動車は普通免許で運転できる",a:false,e:"普通免許では最大積載量２トン未満までです。最大積載量2トンの車は運転できません。"},
-/* 16 */ {q:"車のフロントガラスがくもったときは、エアコンを使用して風向きをデフロスターの位置にするとよい。",a:true,e:"問題文の通りです。"},
-/* 17 */ {q:"遠心力は、速度の二乗に比例して大きくなり、カーブの半径が小さくなるほど大きくなる。",a:true,e:"問題文の通りです。"},
-/* 18 */ {q:"自家用普通自動車の検査（車検）の時期は１年ごとに検査を受け、自動車検査証の交付を受けていなければ、運転してはならない。",a:false,e:"初回は３年２回目の車検からは２年ごとです。"},
+/* 13 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 14 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 15 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 16 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 17 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 18 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
 /* 19 */ {q:"歩行者や自転車のそばを通るときは、安全な間隔をあけて徐行しなければならない。",a:false,e:"安全な間隔が空いていれば徐行する必要はありません。"},
 /* 20 */ {q:"子どもが歩道や路側帯を歩いていたが、安全な間隔が保てたので徐行しなかった。",a:false,e:"一時停止か徐行し安全に通行できるようにします。"},
 /* 21 */ {q:"交通事故を起こしたときは、まず続発事故を防ぐ処置をした後、負傷者の応急救護処置を行い、その後に警察官に報告する。",a:true,e:"問題文の通りです。"},
@@ -177,3 +177,4 @@ showQuestion();
 
 </body>
 </html>
+
