--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@ const questions = [
 /* 16 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
 /* 17 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
 /* 18 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
-/* 19 */ {q:"歩行者や自転車のそばを通るときは、安全な間隔をあけて徐行しなければならない。",a:false,e:"安全な間隔が空いていれば徐行する必要はありません。"},
-/* 20 */ {q:"子どもが歩道や路側帯を歩いていたが、安全な間隔が保てたので徐行しなかった。",a:false,e:"一時停止か徐行し安全に通行できるようにします。"},
-/* 21 */ {q:"交通事故を起こしたときは、まず続発事故を防ぐ処置をした後、負傷者の応急救護処置を行い、その後に警察官に報告する。",a:true,e:"問題文の通りです。"},
-/* 22 */ {q:"酒を飲んでいる人や、無免許の人に車を貸したりすると、車を所有する者や貸した人も罰せられる。",a:true,e:"問題文の通りです。"},
-/* 23 */ {q:"この図のような警察官の手信号は、矢印の方向の交通に対しては、青色の矢印信号と同じ意味である。",img:"images/q13.png",a:false,e:"信号機の赤と同じ意味です。"},
-/* 24 */ {q:"警察官がこのような灯火の信号をしているときは、矢印の方向の交通に対しては、信号機の赤色の灯火の信号と同じ意味である。",img:"images/q14.png",a:false,e:"信号機の黄色と同じ意味です。"},
-/* 25 */ {q:"横断歩道や自転車横断帯の手前で、停止している車の側方を通って前に出ようとする車は、徐行しなければならない。",a:false,e:"前方に出るまえに一時停止します。"},
+/* 19 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 20 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 21 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 22 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 23 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 24 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 25 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
 /* 26 */ {q:"交差点付近を走行中、緊急自動車が近づいてきたので、左側によって徐行した。",a:false,e:"交差点を避けて、左側に寄り一時停止します。"},
 /* 27 */ {q:"自動車の乗車定員は、12歳未満の子供２人で大人1人として計算する。",a:false,e:"12歳未満のこどもは、3人を大人2人として計算します。"},
 /* 28 */ {q:"左側部分の道路幅が6メートル未満の見通しの良い道路では、標識や標示によって追い越しが禁止されている場合や対向車がある場合を除いて、道路の中央から右側部分にはみ出して追い越しすることができる。",a:true,e:"問題文の通りです。"},
@@ -177,4 +177,5 @@ showQuestion();
 
 </body>
 </html>
+
 
