--- a/index.html
+++ b/index.html
@@ -86,31 +86,31 @@ const questions = [
 /* 23 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
 /* 24 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
 /* 25 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
-/* 26 */ {q:"交差点付近を走行中、緊急自動車が近づいてきたので、左側によって徐行した。",a:false,e:"交差点を避けて、左側に寄り一時停止します。"},
-/* 27 */ {q:"自動車の乗車定員は、12歳未満の子供２人で大人1人として計算する。",a:false,e:"12歳未満のこどもは、3人を大人2人として計算します。"},
-/* 28 */ {q:"左側部分の道路幅が6メートル未満の見通しの良い道路では、標識や標示によって追い越しが禁止されている場合や対向車がある場合を除いて、道路の中央から右側部分にはみ出して追い越しすることができる。",a:true,e:"問題文の通りです。"},
-/* 29 */ {q:"道路の中央線が白の実線であったが、追い越しをするため中央線をはみ出して通行した。",a:false,e:"中央線が白の実線のときは中央線をはみ出しての通行ができません。"},
-/* 30 */ {q:"駐車場、車庫などの自動車専用ので入れ口から３メートル以内の場所は、駐停車禁止場所である。",a:false,e:"駐車禁止場所です。"},
-/* 31 */ {q:"路線バスの専用通行帯は、一般原動機付き自転車の通行はできない。",a:false,e:"専用通行帯は指定された車と小型特殊自動車、原動機付自転車、軽車両は通行できます。"},
-/* 32 */ {q:"歩道を横切るときは、歩行者の通行を妨げないようにしなければならないが、歩行者がいない場合は、その直前で徐行しなければならない。",a:false,e:"歩行者がいる、いないにかかわらず一時停止します。"},
-/* 33 */ {q:"左右の見通しのきかない交差点で、信号機の信号が青色のときは、徐行せずそのまま通行してよい。",a:true,e:"問題文の通りです。"},
-/* 34 */ {q:"停留所で止まっている路面電車に乗り降りする人がいる場合であっても、徐行すれば通行することができる。",a:false,e:"乗り降りする人等がいなくなるまで、路面電車の後方で停止します。"},
-/* 35 */ {q:"児童・幼児の乗り降りのために停止している通学・通園バスの側方を通過するときは、後方で一時停止して安全を確かめなければならない",a:false,e:"徐行して安全を確かめます。"},
-/* 36 */ {q:"こどもがひとりで歩いているそばを通るときは、必ず一時停止して安全に通行させなければならない。",a:false,e:"一時停止か徐行して安全に通行させます。"},
-/* 37 */ {q:"消火せん、指定消防水利の標識があるところや消防用機械器具の置場、消防用防火水そう、これらの道路に接する出入り口から5メートル以内の場所は、駐車も停車もしてはならない。",a:false,e:"駐車禁止場所です。 "},
-/* 38 */ {q:"横断歩道や自転車横断帯の前後３０メートル以内は、追い越しが禁止されている。",a:false,e:"前後ではなく、手前から３０メートル以内です。"},
-/* 39 */ {q:"徐行や停止をするときは、その行為をしようとするときに、合図をすればよい。",a:true,e:"問題文の通りです。"},
-/* 40 */ {q:"ハンドブレーキは、レバーをいっぱいに引いたとき、引きしろが多い方がよい。",a:false,e:"多すぎたり少なすぎたりせずに適正な引きしろで、しっかり制動力がかかることが重要です。"},
-/* 41 */ {q:"環状交差点を出ようとするときの合図を行う時期は、出ようとするときの約３秒前である。",a:false,e:"出ようとする地点の直前の出口の側方を通過したときです。（環状交差点入った直後の出口を出る場合は、その環状交差点に入ったとき。) "},
-/* 42 */ {q:"普通自動車は、すべて地上から3.8メートルの高さまで荷物を積むことができる。",a:false,e:"三輪の普通自動車と総排気量660CC以下のの普通自動車は、地上から2.5メートル以下です"},
-/* 43 */ {q:"霧の中や吹雪のときは、道路がよく見えないので前照灯を上向きに操作して走行するとよい。",a:false,e:"ライトは下向きにします。上向きにすると霧や雪に乱反射してみえにくくなります。"},
-/* 44 */ {q:"高速自動車国道で道路の構造上、往復の方向別に分離されていない区間での最高速度は一般道路と同じである。",a:true,e:"問題文の通りです。"},
-/* 45 */ {q:"後輪が右に横すべりを始めたときは、車体は左に向くので、左にハンドルを切って車体の向きを立て直すとよい。",a:false,e:"車体は左に向くので、右にハンドルを切ります。"},
-/* 46 */ {q:"幅0.75メートル以下の路側帯に駐停車するときは、道路の左端に沿うとよい。",a:false,e:"車道の左端に沿います。"},
-/* 47 */ {q:"追い越しが終わったら、すぐに追い越した車の前に入った方がよい。",a:false,e:"追い越した車との間に安全な車間距離があいてから戻りましょう。"},
-/* 48 */ {q:"高速道路の本線車道に入るときは、徐行をして安全を確かめなければならない。",a:false,e:"十分加速し、本線車道を通行している車の進行を妨げないように合流します。"},
-/* 49 */ {q:"踏切内では、発進したときの低速ギアのまま、中央寄りを一気に通過するのがよい。",a:true,e:"問題文の通りです。"},
-/* 50 */ {q:"一方通行となっている道路では、道路の右側部分を通行することができる。",a:true,e:"問題文の通りです。"}
+/* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 27 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 28 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 29 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 30 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 31 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 32 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 33 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 34 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 35 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 36 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 37 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 38 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 39 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 40 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 41 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 42 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 43 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 44 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 45 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 46 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 47 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 48 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 49 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 50 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
 ];
 
 function showQuestion(){
@@ -177,5 +177,6 @@ showQuestion();
 
 </body>
 </html>
+
 
 
