--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ let score = 0;
 let wrongList = [];
 
 const questions = [
-/* 1 */ {q:"この標識は前方に「路面電車の停留所がある」ことを示している。",img:"images/q1.png",a:false,e:"この先「踏切あり」です。"},
+/* 1 */ {q:"この標識は、車は通行できないが、歩行者は通行できることを示している。",img:"images/q1.png",a:false,e:"歩行者、遠隔操作小型車、車、路面電車のすべてが通行できません。"},
 /* 2 */ {q:"この標識はこの先「ロータリーあり」を示している。",img:"images/q2.png",a:false,e:"この先「環状交差点」ありです。"},
 /* 3 */ {q:"この標識は、道路が「一方通行」であることを示している。",img:"images/q3.png",a:false,e:"「指定方向外進行禁止」です車は直進しか進めません。"},
 /* 4 */ {q:"この標識は「二輪の自動車以外の自動車通行止め」を示している。",img:"images/q4.png",a:false,e:"「大型自動二輪車及び普通自動二輪車二人乗り通行禁止」です。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
