--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ let wrongList = [];
 
 const questions = [
 /* 1 */ {q:"この標識は、車は通行できないが、歩行者は通行できることを示している。",img:"images/q1.png",a:false,e:"歩行者、遠隔操作小型車、車、路面電車のすべてが通行できません。"},
-/* 2 */ {q:"この標識はこの先「ロータリーあり」を示している。",img:"images/q2.png",a:false,e:"この先「環状交差点」ありです。"},
-/* 3 */ {q:"この標識は、道路が「一方通行」であることを示している。",img:"images/q3.png",a:false,e:"「指定方向外進行禁止」です車は直進しか進めません。"},
+/* 2 */ {q:"この標識は、自動車はもちろん、原動機自動車や軽車両も通行できない。",img:"images/q2.png",a:true,e:"問題文の通りです。"},
+/* 3 */ {q:"この標識は、車両進入禁止で、標識のある方向からは進入できない。",img:"images/q3.png",a:true,e:"問題文の通りです。"},
 /* 4 */ {q:"この標識は「二輪の自動車以外の自動車通行止め」を示している。",img:"images/q4.png",a:false,e:"「大型自動二輪車及び普通自動二輪車二人乗り通行禁止」です。"},
 /* 5 */ {q:"この標識は、道路に駐車や停車をしてはならないことを示している。",img:"images/q5.png",a:false,e:"「駐車禁止」です。"},
 /* 6 */ {q:"この標識は高速自動車国道または自動車専用道路であることを示している。",img:"images/q6.png",a:true,e:"問題文の通りです。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
