--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ const questions = [
 /* 1 */ {q:"この標識は、車は通行できないが、歩行者は通行できることを示している。",img:"images/q1.png",a:false,e:"歩行者、遠隔操作小型車、車、路面電車のすべてが通行できません。"},
 /* 2 */ {q:"この標識は、自動車はもちろん、原動機自動車や軽車両も通行できない。",img:"images/q2.png",a:true,e:"問題文の通りです。"},
 /* 3 */ {q:"この標識は、車両進入禁止で、標識のある方向からは進入できない。",img:"images/q3.png",a:true,e:"問題文の通りです。"},
-/* 4 */ {q:"この標識は「二輪の自動車以外の自動車通行止め」を示している。",img:"images/q4.png",a:false,e:"「大型自動二輪車及び普通自動二輪車二人乗り通行禁止」です。"},
-/* 5 */ {q:"この標識は、道路に駐車や停車をしてはならないことを示している。",img:"images/q5.png",a:false,e:"「駐車禁止」です。"},
+/* 4 */ {q:"この標識のある交差点で右折する原動機付自転車は、右折するところまで進行する間、右折の合図をしなくてもよい。",img:"images/q4.png",a:false,e:"交差点の30ｍ手前から、右に向きを変えるところまで、右折の合図をします。"},
+/* 5 */ {q:"この標識のある場所では、8時から２０時までの間、駐車が禁止されていることを示している。",img:"images/q5.png",a:true,e:"問題文の通りです。"},
 /* 6 */ {q:"この標識は高速自動車国道または自動車専用道路であることを示している。",img:"images/q6.png",a:true,e:"問題文の通りです。"},
 /* 7 */ {q:"この標識のあるところでは、右折することができない",img:"images/q7.png",a:false,e:"「車両横断禁止」です。右折はできます。"},
 /* 8 */ {q:"駐車が禁止されている場所であっても、図の標識のあるところで高齢者マークを貼っているので車を止めた。",img:"images/q8.png",a:false,e:"「高齢運転者等標章自動車駐車可」です。専用場所駐車標章に登録番号が記載されている普通自動車のみ駐車できます。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
