--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ const questions = [
 /* 3 */ {q:"この標識は、車両進入禁止で、標識のある方向からは進入できない。",img:"images/q3.png",a:true,e:"問題文の通りです。"},
 /* 4 */ {q:"この標識のある交差点で右折する原動機付自転車は、右折するところまで進行する間、右折の合図をしなくてもよい。",img:"images/q4.png",a:false,e:"交差点の30ｍ手前から、右に向きを変えるところまで、右折の合図をします。"},
 /* 5 */ {q:"この標識のある場所では、8時から２０時までの間、駐車が禁止されていることを示している。",img:"images/q5.png",a:true,e:"問題文の通りです。"},
-/* 6 */ {q:"この標識は高速自動車国道または自動車専用道路であることを示している。",img:"images/q6.png",a:true,e:"問題文の通りです。"},
+/* 6 */ {q:"この標識のある場所では、道路の幅が６メートルなければ駐車してはならないことを示している。",img:"images/q6.png",a:false,e:"車の右側に６メートルの余地がなければ駐車できません。"},
 /* 7 */ {q:"この標識のあるところでは、右折することができない",img:"images/q7.png",a:false,e:"「車両横断禁止」です。右折はできます。"},
 /* 8 */ {q:"駐車が禁止されている場所であっても、図の標識のあるところで高齢者マークを貼っているので車を止めた。",img:"images/q8.png",a:false,e:"「高齢運転者等標章自動車駐車可」です。専用場所駐車標章に登録番号が記載されている普通自動車のみ駐車できます。"},
 /* 9 */ {q:"この標識はこの先合流交通になることを示している。",img:"images/q9.png",a:false,e:"「Y形道路交差点あり」です。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
