--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ const questions = [
 /* 5 */ {q:"この標識のある場所では、8時から２０時までの間、駐車が禁止されていることを示している。",img:"images/q5.png",a:true,e:"問題文の通りです。"},
 /* 6 */ {q:"この標識のある場所では、道路の幅が６メートルなければ駐車してはならないことを示している。",img:"images/q6.png",a:false,e:"車の右側に６メートルの余地がなければ駐車できません。"},
 /* 7 */ {q:"この標識のあるところでは、右折することができない",img:"images/q7.png",a:false,e:"「車両横断禁止」です。右折はできます。"},
-/* 8 */ {q:"駐車が禁止されている場所であっても、図の標識のあるところで高齢者マークを貼っているので車を止めた。",img:"images/q8.png",a:false,e:"「高齢運転者等標章自動車駐車可」です。専用場所駐車標章に登録番号が記載されている普通自動車のみ駐車できます。"},
-/* 9 */ {q:"この標識はこの先合流交通になることを示している。",img:"images/q9.png",a:false,e:"「Y形道路交差点あり」です。"},
-/*10 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q10.png",a:true,e:"問題文の通りです。"},
+/* 8 */ {q:"この標識のあるところでは、同時に後退も禁止されている。",img:"images/q8.png",a:false,e:"「転回禁止」です。後退はできます。"},
+/* 9 */ {q:"この表示は、前方に交差点があることを示している。",img:"images/q9.png",a:false,e:"「横断歩道または自転車横断帯あり」です。"},
+/*10 */ {q:"この▽印の表示がある方が、前方の交差する道路より優先道路である。",img:"images/q10.png",a:false,e:"▽印の表示がない方が優先道路です。▽印の表示がある方を通行している車は、交差点の状況に応じて、他の車両や歩行者に注意し、安全な速度と方法で走行する義務があります。 優先道路を走行するときでも、周囲の状況を確認して、必要に応じて徐行や一時停止をしましょう。"},
 
 /* 11 */ {q:"この図のように警察官が腕を横に水平に上げているときは、矢印の交通に対しては、信号機の赤と同じ意味である。",img:"images/q11.png",a:false,e:"信号機の青と同じ意味です。"},
 /* 12 */ {q:"この図のような警察官の灯火による信号は、矢印の方向の交通に対しては、黄色の灯火の信号と同じ意味である。",img:"images/q12.png",a:false,e:"信号機の赤と同じ意味です。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
