--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ const questions = [
 /* 9 */ {q:"この表示は、前方に交差点があることを示している。",img:"images/q9.png",a:false,e:"「横断歩道または自転車横断帯あり」です。"},
 /*10 */ {q:"この▽印の表示がある方が、前方の交差する道路より優先道路である。",img:"images/q10.png",a:false,e:"▽印の表示がない方が優先道路です。▽印の表示がある方を通行している車は、交差点の状況に応じて、他の車両や歩行者に注意し、安全な速度と方法で走行する義務があります。 優先道路を走行するときでも、周囲の状況を確認して、必要に応じて徐行や一時停止をしましょう。"},
 
-/* 11 */ {q:"この図のように警察官が腕を横に水平に上げているときは、矢印の交通に対しては、信号機の赤と同じ意味である。",img:"images/q11.png",a:false,e:"信号機の青と同じ意味です。"},
+/* 11 */ {q:"この標識のある道路では、普通乗用自動車以外の自動車は通行できない。",img:"images/q11.png",a:false,e:"「自動車専用」です。高速道路、自動車専用道路であることを示し、ミニカー、一般原動機付自転車"},
 /* 12 */ {q:"この図のような警察官の灯火による信号は、矢印の方向の交通に対しては、黄色の灯火の信号と同じ意味である。",img:"images/q12.png",a:false,e:"信号機の赤と同じ意味です。"},
 /* 13 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q13.png",a:true,e:"問題文の通りです。"},
 /* 14 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q14.png",a:true,e:"問題文の通りです。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
