--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ const questions = [
 /* 9 */ {q:"この表示は、前方に交差点があることを示している。",img:"images/q9.png",a:false,e:"「横断歩道または自転車横断帯あり」です。"},
 /*10 */ {q:"この▽印の表示がある方が、前方の交差する道路より優先道路である。",img:"images/q10.png",a:false,e:"▽印の表示がない方が優先道路です。▽印の表示がある方を通行している車は、交差点の状況に応じて、他の車両や歩行者に注意し、安全な速度と方法で走行する義務があります。 優先道路を走行するときでも、周囲の状況を確認して、必要に応じて徐行や一時停止をしましょう。"},
 
-/* 11 */ {q:"この標識のある道路では、普通乗用自動車以外の自動車は通行できない。",img:"images/q11.png",a:false,e:"「自動車専用」です。高速道路、自動車専用道路であることを示し、ミニカー、一般原動機付自転車"},
+/* 11 */ {q:"この標識のある道路では、普通乗用自動車以外の自動車は通行できない。",img:"images/q11.png",a:false,e:"「自動車専用」です。高速自動車国道または自動車専用道路であることを示し、ミニカー、一般原動機付自転車,125cc以下または定格出力1.00kw以下の普通自動二輪車は通行できません。"},
 /* 12 */ {q:"この図のような警察官の灯火による信号は、矢印の方向の交通に対しては、黄色の灯火の信号と同じ意味である。",img:"images/q12.png",a:false,e:"信号機の赤と同じ意味です。"},
 /* 13 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q13.png",a:true,e:"問題文の通りです。"},
 /* 14 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q14.png",a:true,e:"問題文の通りです。"},
@@ -80,7 +80,7 @@ const questions = [
 /* 17 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q17.png",a:true,e:"問題文の通りです。"},
 /* 18 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q18.png",a:true,e:"問題文の通りです。"},
 /* 19 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q19.png",a:true,e:"問題文の通りです。"},
-/* 20 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q20.png",a:true,e:"問題文の通りです。"},
+/* 20 */ {q:"この標識のあるところでは、最大積載量2.000キログラムの貨物自動車は通行してもよい。",img:"images/q20.png",a:true,e:"問題文の通りです。"},
 /* 21 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q21.png",a:true,e:"問題文の通りです。"},
 /* 22 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q22.png",a:true,e:"問題文の通りです。"},
 /* 23 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q23.png",a:true,e:"問題文の通りです。"},
@@ -93,7 +93,7 @@ const questions = [
 /* 30 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q30.png",a:true,e:"問題文の通りです。"},
 /* 31 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q31.png",a:true,e:"問題文の通りです。"},
 /* 32 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q32.png",a:true,e:"問題文の通りです。"},
-/* 33 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q33.png",a:true,e:"問題文の通りです。"},
+/* 33 */ {q:"この標識は、車は道路の右側部分にはみ出して追い越すことができる。",img:"images/q33.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」です。車は、道路の右側部分にはみ出して追い越しをしてはいけません。"},
 /* 34 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q34.png",a:true,e:"問題文の通りです。"},
 /* 35 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q35.png",a:true,e:"問題文の通りです。"},
 /* 36 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q36.png",a:true,e:"問題文の通りです。"},
@@ -105,7 +105,7 @@ const questions = [
 /* 42 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q42.png",a:true,e:"問題文の通りです。"},
 /* 43 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q43.png",a:true,e:"問題文の通りです。"},
 /* 44 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q44.png",a:true,e:"問題文の通りです。"},
-/* 45 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q45.png",a:true,e:"問題文の通りです。"},
+/* 45 */ {q:"交差点の手前にこの標識がある場合は、自分の通行している道路が「優先道路」であることを示している。",img:"images/q45.png",a:true,e:"問題文の通りです。"},
 /* 46 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q46.png",a:true,e:"問題文の通りです。"},
 /* 47 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q47.png",a:true,e:"問題文の通りです。"},
 /* 48 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q48.png",a:true,e:"問題文の通りです。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
