--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@ const questions = [
 /* 11 */ {q:"この標識のある道路では、普通乗用自動車以外の自動車は通行できない。",img:"images/q11.png",a:false,e:"「自動車専用」です。高速自動車国道または自動車専用道路であることを示し、ミニカー、一般原動機付自転車,125cc以下または定格出力1.00kw以下の普通自動二輪車は通行できません。"},
 /* 12 */ {q:"この図のような警察官の灯火による信号は、矢印の方向の交通に対しては、黄色の灯火の信号と同じ意味である。",img:"images/q12.png",a:false,e:"信号機の赤と同じ意味です。"},
 /* 13 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q13.png",a:true,e:"問題文の通りです。"},
-/* 14 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q14.png",a:true,e:"問題文の通りです。"},
-/* 15 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q15.png",a:true,e:"問題文の通りです。"},
-/* 16 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q16.png",a:true,e:"問題文の通りです。"},
+/* 14 */ {q:"この標識は、路線バス等の優先通行帯を示すもので、路線バスが近づいたときは、ほかの自動車は速やかにその通行帯から出なければならない。",img:"images/q14.png",a:true,e:"問題文の通りです。"},
+/* 15 */ {q:"この標識のある通行帯では、指定された車以外の車（小型特殊自動車、原動機付自転車、軽車両を除く）は左折や工事などでやむを得ない場合のほかは通行することができない。",img:"images/q15.png",a:true,e:"問題文の通りです。"},
+/* 16 */ {q:"この標識は、歩行車だけの通行のために設けられた道路を示している。",img:"images/q16.png",a:true,e:"問題文の通りです。「歩行者専用道路」です。"},
 /* 17 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q17.png",a:true,e:"問題文の通りです。"},
 /* 18 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q18.png",a:true,e:"問題文の通りです。"},
-/* 19 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q19.png",a:true,e:"問題文の通りです。"},
-/* 20 */ {q:"この標識のあるところでは、最大積載量2.000キログラムの貨物自動車は通行してもよい。",img:"images/q20.png",a:true,e:"問題文の通りです。"},
+/* 19 */ {q:"この標識は、普通乗用自動車だけの通行を禁止している。",img:"images/q19.png",a:false,e:"「二輪の自動車以外の自動車通行止め」です二輪の自動車のみ通行できます。"},
+/* 20 */ {q:"この標識のあるところでは、最大積載量2.000キログラムの貨物自動車は通行してもよい。",img:"images/q20.png",a:true,e:"問題文の通りです。大型貨物自動車と特定中型貨物自動車、大型特殊自動車は通行できません。最大積載量2.000キログラムの貨物自動車は通行できます。"},
 /* 21 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q21.png",a:true,e:"問題文の通りです。"},
-/* 22 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q22.png",a:true,e:"問題文の通りです。"},
+/* 22 */ {q:"この表示は、立ち入り禁止部分であることを示している。",img:"images/q22.png",a:true,e:"問題文の通りです。"},
 /* 23 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q23.png",a:true,e:"問題文の通りです。"},
 /* 24 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q24.png",a:true,e:"問題文の通りです。"},
 /* 25 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q25.png",a:true,e:"問題文の通りです。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
