--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ const questions = [
 /* 16 */ {q:"この標識は、歩行車だけの通行のために設けられた道路を示している。",img:"images/q16.png",a:true,e:"問題文の通りです。「歩行者専用道路」です。"},
 /* 17 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q17.png",a:true,e:"問題文の通りです。"},
 /* 18 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q18.png",a:true,e:"問題文の通りです。"},
-/* 19 */ {q:"この標識は、普通乗用自動車だけの通行を禁止している。",img:"images/q19.png",a:false,e:"「二輪の自動車以外の自動車通行止め」です二輪の自動車のみ通行できます。"},
+/* 19 */ {q:"この標識は、普通乗用自動車だけの通行を禁止している。",img:"images/q19.png",a:false,e:"「二輪の自動車以外の自動車通行止め」です。二輪の自動車のみ通行できます。"},
 /* 20 */ {q:"この標識のあるところでは、最大積載量2.000キログラムの貨物自動車は通行してもよい。",img:"images/q20.png",a:true,e:"問題文の通りです。大型貨物自動車と特定中型貨物自動車、大型特殊自動車は通行できません。最大積載量2.000キログラムの貨物自動車は通行できます。"},
 /* 21 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q21.png",a:true,e:"問題文の通りです。"},
 /* 22 */ {q:"この表示は、立ち入り禁止部分であることを示している。",img:"images/q22.png",a:true,e:"問題文の通りです。"},
@@ -91,8 +91,8 @@ const questions = [
 /* 28 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q28.png",a:true,e:"問題文の通りです。"},
 /* 29 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q29.png",a:true,e:"問題文の通りです。"},
 /* 30 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q30.png",a:true,e:"問題文の通りです。"},
-/* 31 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q31.png",a:true,e:"問題文の通りです。"},
-/* 32 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q32.png",a:true,e:"問題文の通りです。"},
+/* 31 */ {q:"この標識があるときは、前方の信号が赤や黄であっても、周りの交通に注意しながら左折することができる。",img:"images/q31.png",a:false,e:"「一方通行」です。車は矢印の方向の示す反対方向には通行できません。"},
+/* 32 */ {q:"この標識があるときは、前方の信号が赤や黄であっても、周りの交通に注意しながら左折することができる。",img:"images/q32.png",a:true,e:"問題文の通りです。"},
 /* 33 */ {q:"この標識は、車は道路の右側部分にはみ出して追い越すことができる。",img:"images/q33.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」です。車は、道路の右側部分にはみ出して追い越しをしてはいけません。"},
 /* 34 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q34.png",a:true,e:"問題文の通りです。"},
 /* 35 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q35.png",a:true,e:"問題文の通りです。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
