--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ const questions = [
 /* 25 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q25.png",a:true,e:"問題文の通りです。"},
 /* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q26.png",a:true,e:"問題文の通りです。"},
 /* 27 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。"},
-/* 28 */ {q:"この表示は、道路中央寄り右側部分にはみ出して追い越すときは、対向車に注意しなければならないことを示している。",img:"images/q28.png",a:false,e:""},
+/* 28 */ {q:"この表示は、道路中央寄り右側部分にはみ出して追い越すときは、対向車に注意しなければならないことを示している。",img:"images/q28.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」です。追い越しのため道路の右側部分にはみ出して通行してはいけません。"},
 /* 29 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q29.png",a:true,e:"問題文の通りです。"},
 /* 30 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q30.png",a:true,e:"問題文の通りです。"},
 /* 31 */ {q:"この標識があるときは、前方の信号が赤や黄であっても、周りの交通に注意しながら左折することができる。",img:"images/q31.png",a:false,e:"「一方通行」です。車は矢印の方向の示す反対方向には通行できません。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
