--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ const questions = [
 /* 24 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q24.png",a:true,e:"問題文の通りです。"},
 /* 25 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q25.png",a:true,e:"問題文の通りです。"},
 /* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q26.png",a:true,e:"問題文の通りです。"},
-/* 27 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。"},
+/* 27 */ {q:"この標識は、この先で左から道路が合流してくることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。"},
 /* 28 */ {q:"この表示は、道路中央寄り右側部分にはみ出して追い越すときは、対向車に注意しなければならないことを示している。",img:"images/q28.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」です。追い越しのため道路の右側部分にはみ出して通行してはいけません。"},
 /* 29 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q29.png",a:true,e:"問題文の通りです。"},
 /* 30 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q30.png",a:true,e:"問題文の通りです。"},
@@ -110,7 +110,7 @@ const questions = [
 /* 47 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q47.png",a:true,e:"問題文の通りです。"},
 /* 48 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q48.png",a:true,e:"問題文の通りです。"},
 /* 49 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q49.png",a:true,e:"問題文の通りです。"},
-/* 50 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q50.png",a:true,e:"問題文の通りです。"},
+/* 50 */ {q:"この表示は、駐停車禁止を示している。",img:"images/q50.png",a:true,e:"「駐車禁止」です。"},
 ];
 
 function showQuestion(){
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
