--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ const questions = [
 /* 44 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q44.png",a:true,e:"問題文の通りです。"},
 /* 45 */ {q:"交差点の手前にこの標識がある場合は、自分の通行している道路が「優先道路」であることを示している。",img:"images/q45.png",a:true,e:"問題文の通りです。"},
 /* 46 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q46.png",a:true,e:"問題文の通りです。"},
-/* 47 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q47.png",a:true,e:"問題文の通りです。"},
-/* 48 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q48.png",a:true,e:"問題文の通りです。"},
-/* 49 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q49.png",a:true,e:"問題文の通りです。"},
+/* 47 */ {q:"この表示は、その場所が「転回禁止」の終わりであることを示している。",img:"images/q47.png",a:false,e:"「転回禁止」です。"},
+/* 48 */ {q:"この表示は、この先50メートルに踏切または交差点があることを示している。",img:"images/q48.png",a:false,e:"「時速５０キロメートルの終わり」  問題文の通りです。"},
+/* 49 */ {q:"この表示は、駐車禁止を示している。",img:"images/q49.png",a:false,e:"「駐停車禁止」です。"},
 /* 50 */ {q:"この表示は、駐停車禁止を示している。",img:"images/q50.png",a:true,e:"「駐車禁止」です。"},
 ];
 
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
