--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@ const questions = [
 /* 37 */ {q:"この標識は、すべりやすいので注意しなければならないことを示している。",img:"images/q37.png",a:false,e:"「右（左）つづら折りあり」です。山道などでよく見られるような、右方向（左方向）への急なカーブが連続して続く「ジグザグ道」になっていることを示す標識です。この標識を見たら、連続するカーブに備えて速度を落とし、慎重にハンドル操作をする必要があります。"},
 /* 38 */ {q:"これは高齢者マークであり、７０歳以上の高齢運転者は、普通自動車を運転する場合、その車の前と後ろの定められた位置につけるようにした方がよい。",img:"images/q38.png",a:true,e:"問題文の通りです。"},
 /* 39 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q39.png",a:true,e:"問題文の通りです。"},
-/* 40 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q40.png",a:true,e:"問題文の通りです。"},
-/* 41 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q41.png",a:true,e:"問題文の通りです。"},
+/* 40 */ {q:"この標識のあるところでは，自動車は停止してはならない。",img:"images/q40.png",a:false,e:"「停車可」です。車は、停車することができます。。"},
+/* 41 */ {q:"この標識は、駐車禁止を示している。",img:"images/q41.png",a:false,e:"「駐車可」です。車は、駐車することができます。"},
 /* 42 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q42.png",a:true,e:"問題文の通りです。"},
 /* 43 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q43.png",a:true,e:"問題文の通りです。"},
 /* 44 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q44.png",a:true,e:"問題文の通りです。"},
 /* 45 */ {q:"交差点の手前にこの標識がある場合は、自分の通行している道路が「優先道路」であることを示している。",img:"images/q45.png",a:true,e:"問題文の通りです。"},
 /* 46 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q46.png",a:true,e:"問題文の通りです。"},
 /* 47 */ {q:"この表示は、その場所が「転回禁止」の終わりであることを示している。",img:"images/q47.png",a:false,e:"「転回禁止」です。"},
-/* 48 */ {q:"この表示は、この先50メートルに踏切または交差点があることを示している。",img:"images/q48.png",a:false,e:"「時速５０キロメートルの終わり」  問題文の通りです。"},
+/* 48 */ {q:"この表示は、この先50メートルに踏切または交差点があることを示している。",img:"images/q48.png",a:false,e:"「規制速度時速５０キロメートルの終わり」です。"},
 /* 49 */ {q:"この表示は、駐車禁止を示している。",img:"images/q49.png",a:false,e:"「駐停車禁止」です。"},
 /* 50 */ {q:"この表示は、駐停車禁止を示している。",img:"images/q50.png",a:true,e:"「駐車禁止」です。"},
 ];
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
