--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ const questions = [
 /* 21 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q21.png",a:true,e:"問題文の通りです。"},
 /* 22 */ {q:"この表示は、立ち入り禁止部分であることを示している。",img:"images/q22.png",a:true,e:"問題文の通りです。"},
 /* 23 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q23.png",a:true,e:"問題文の通りです。"},
-/* 24 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q24.png",a:true,e:"問題文の通りです。"},
-/* 25 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q25.png",a:true,e:"問題文の通りです。"},
+/* 24 */ {q:"この白の二本線で示された路側帯は、車はその中に入って駐車をしてもよい。",img:"images/q24.png",a:true,e:"「歩行者専用路側帯」なので、車の駐停車は禁止されています。"},
+/* 25 */ {q:"この表示の路側帯に入って、駐車や停車をすることはできない。",img:"images/q25.png",a:true,e:"問題文の通りです。「駐停車禁止路側帯」です。"},
 /* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q26.png",a:true,e:"問題文の通りです。"},
 /* 27 */ {q:"この標識は、この先で左から道路が合流してくることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。"},
 /* 28 */ {q:"この表示は、道路中央寄り右側部分にはみ出して追い越すときは、対向車に注意しなければならないことを示している。",img:"images/q28.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」です。追い越しのため道路の右側部分にはみ出して通行してはいけません。"},
@@ -94,9 +94,9 @@ const questions = [
 /* 31 */ {q:"この標識があるときは、前方の信号が赤や黄であっても、周りの交通に注意しながら左折することができる。",img:"images/q31.png",a:false,e:"「一方通行」です。車は矢印の方向の示す反対方向には通行できません。"},
 /* 32 */ {q:"この標識があるときは、前方の信号が赤や黄であっても、周りの交通に注意しながら左折することができる。",img:"images/q32.png",a:true,e:"問題文の通りです。"},
 /* 33 */ {q:"この標識は、車は道路の右側部分にはみ出して追い越すことができる。",img:"images/q33.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」です。車は、道路の右側部分にはみ出して追い越しをしてはいけません。"},
-/* 34 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q34.png",a:true,e:"問題文の通りです。"},
-/* 35 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q35.png",a:true,e:"問題文の通りです。"},
-/* 36 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q36.png",a:true,e:"問題文の通りです。"},
+/* 34 */ {q:"この標識は、車は、一般原動機付自転車を追い越すため進路を変えたり、その横を通り過ぎたりしてはならない。",img:"images/q34.png",a:true,e:"問題文の通りです。「追い越し禁止」です。すべての追い越し行為が禁止されています。"},
+/* 35 */ {q:"この標識は、警音器を鳴らさなければならないことを示している。",img:"images/q35.png",a:true,e:"問題文の通りです。"},
+/* 36 */ {q:"この標識がある区間内の見通しがきかない交差点、曲がり角、上り坂の頂上付近では、警音器を鳴らす必要がある。",img:"images/q36.png",a:true,e:"問題文の通りです。「警笛区間」の標識です。"},
 /* 37 */ {q:"この標識は、すべりやすいので注意しなければならないことを示している。",img:"images/q37.png",a:false,e:"「右（左）つづら折りあり」です。山道などでよく見られるような、右方向（左方向）への急なカーブが連続して続く「ジグザグ道」になっていることを示す標識です。この標識を見たら、連続するカーブに備えて速度を落とし、慎重にハンドル操作をする必要があります。"},
 /* 38 */ {q:"これは高齢者マークであり、７０歳以上の高齢運転者は、普通自動車を運転する場合、その車の前と後ろの定められた位置につけるようにした方がよい。",img:"images/q38.png",a:true,e:"問題文の通りです。"},
 /* 39 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q39.png",a:true,e:"問題文の通りです。"},
@@ -106,7 +106,7 @@ const questions = [
 /* 43 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q43.png",a:true,e:"問題文の通りです。"},
 /* 44 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q44.png",a:true,e:"問題文の通りです。"},
 /* 45 */ {q:"交差点の手前にこの標識がある場合は、自分の通行している道路が「優先道路」であることを示している。",img:"images/q45.png",a:true,e:"問題文の通りです。"},
-/* 46 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q46.png",a:true,e:"問題文の通りです。"},
+/* 46 */ {q:"この標識は、この先の道路の道幅が狭くなっていることを示している。",img:"images/q46.png",a:true,e:"問題文の通りです。「幅員減少」です。"},
 /* 47 */ {q:"この表示は、その場所が「転回禁止」の終わりであることを示している。",img:"images/q47.png",a:false,e:"「転回禁止」です。"},
 /* 48 */ {q:"この表示は、この先50メートルに踏切または交差点があることを示している。",img:"images/q48.png",a:false,e:"「規制速度時速５０キロメートルの終わり」です。"},
 /* 49 */ {q:"この表示は、駐車禁止を示している。",img:"images/q49.png",a:false,e:"「駐停車禁止」です。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
