--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ const questions = [
 
 /* 11 */ {q:"この標識のある道路では、普通乗用自動車以外の自動車は通行できない。",img:"images/q11.png",a:false,e:"「自動車専用」です。高速自動車国道または自動車専用道路であることを示し、ミニカー、一般原動機付自転車,125cc以下または定格出力1.00kw以下の普通自動二輪車は通行できません。"},
 /* 12 */ {q:"この図のような警察官の灯火による信号は、矢印の方向の交通に対しては、黄色の灯火の信号と同じ意味である。",img:"images/q12.png",a:false,e:"信号機の赤と同じ意味です。"},
-/* 13 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q13.png",a:true,e:"問題文の通りです。"},
+/* 13 */ {q:"この標識のある道路では、運転経歴にかかわらず、大型自動二輪車及び普通自動二輪車での、二人乗り通行を禁止している。",img:"images/q13.png",a:true,e:"問題文の通りです。「大型自動二輪車及び普通自動二輪車二人乗り通行禁止」です。 "},
 /* 14 */ {q:"この標識は、路線バス等の優先通行帯を示すもので、路線バスが近づいたときは、ほかの自動車は速やかにその通行帯から出なければならない。",img:"images/q14.png",a:true,e:"問題文の通りです。"},
 /* 15 */ {q:"この標識のある通行帯では、指定された車以外の車（小型特殊自動車、原動機付自転車、軽車両を除く）は左折や工事などでやむを得ない場合のほかは通行することができない。",img:"images/q15.png",a:true,e:"問題文の通りです。"},
 /* 16 */ {q:"この標識は、歩行車だけの通行のために設けられた道路を示している。",img:"images/q16.png",a:true,e:"問題文の通りです。「歩行者専用道路」です。"},
@@ -81,7 +81,7 @@ const questions = [
 /* 18 */ {q:"この標識は、車が直進や左折することはできるが、午前８時から午後８時までの間、右折することができないことを示している。",img:"images/q18.png",a:true,e:"問題文の通りです。"},
 /* 19 */ {q:"この標識は、普通乗用自動車だけの通行を禁止している。",img:"images/q19.png",a:false,e:"「二輪の自動車以外の自動車通行止め」です。二輪の自動車のみ通行できます。"},
 /* 20 */ {q:"この標識のあるところでは、最大積載量2.000キログラムの貨物自動車は通行してもよい。",img:"images/q20.png",a:true,e:"問題文の通りです。大型貨物自動車と特定中型貨物自動車、大型特殊自動車は通行できません。最大積載量2.000キログラムの貨物自動車は通行できます。"},
-/* 21 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q21.png",a:true,e:"問題文の通りです。"},
+/* 21 */ {q:"この標識のあるところでは、車両総重量3.000キログラムの貨物自動車は通行できないことを示している。",img:"images/q21.png",a:false,e:"「特定の最大積載量以上の貨物自動車等通行止め」です。この場合最大積載量3.000キログラム以上の貨物自動車と大型特殊自動車は通行できません。"},
 /* 22 */ {q:"この表示は、立ち入り禁止部分であることを示している。",img:"images/q22.png",a:true,e:"問題文の通りです。"},
 /* 23 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q23.png",a:true,e:"問題文の通りです。"},
 /* 24 */ {q:"この白の二本線で示された路側帯は、車はその中に入って駐車をしてもよい。",img:"images/q24.png",a:true,e:"「歩行者専用路側帯」なので、車の駐停車は禁止されています。"},
@@ -102,7 +102,7 @@ const questions = [
 /* 39 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q39.png",a:true,e:"問題文の通りです。"},
 /* 40 */ {q:"この標識のあるところでは，自動車は停止してはならない。",img:"images/q40.png",a:false,e:"「停車可」です。車は、停車することができます。。"},
 /* 41 */ {q:"この標識は、駐車禁止を示している。",img:"images/q41.png",a:false,e:"「駐車可」です。車は、駐車することができます。"},
-/* 42 */ {q:"この標識のあるところでは、標章の交付を受けた70歳以上の高齢運転車に限り停車でき、車種は普通自動車に限る。",img:"images/q42.png",a:true,e:"問題文の通りです。「高齢運転者等標章自動車停車可」です。"},
+/* 42 */ {q:"この標識は、標章の交付受けた高齢運転者等が運転する普通自動車が標章を掲示することで停車できることを示している。",img:"images/q42.png",a:true,e:"問題文の通りです。「高齢運転者等標章自動車停車可」です。"},
 /* 43 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q43.png",a:true,e:"問題文の通りです。"},
 /* 44 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q44.png",a:true,e:"問題文の通りです。"},
 /* 45 */ {q:"交差点の手前にこの標識がある場合は、自分の通行している道路が「優先道路」であることを示している。",img:"images/q45.png",a:true,e:"問題文の通りです。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
