--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ img.question-img{
 
 <h1>村上中央自動車学校　学科問題</h1>
 <p style="text-align:center;color:#555;">
-間違いの多い問題（全50問）
+標識・標示の問題（全50問）
 </p>
 
 <div id="container"></div>
@@ -72,7 +72,7 @@ const questions = [
 /*10 */ {q:"この▽印の表示がある方が、前方の交差する道路より優先道路である。",img:"images/q10.png",a:false,e:"▽印の表示がない方が優先道路です。▽印の表示がある方を通行している車は、交差点の状況に応じて、他の車両や歩行者に注意し、安全な速度と方法で走行する義務があります。 優先道路を走行するときでも、周囲の状況を確認して、必要に応じて徐行や一時停止をしましょう。"},
 
 /* 11 */ {q:"この標識のある道路では、普通乗用自動車以外の自動車は通行できない。",img:"images/q11.png",a:false,e:"「自動車専用」です。高速自動車国道または自動車専用道路であることを示し、ミニカー、一般原動機付自転車,125cc以下または定格出力1.00kw以下の普通自動二輪車は通行できません。"},
-/* 12 */ {q:"この図のような警察官の灯火による信号は、矢印の方向の交通に対しては、黄色の灯火の信号と同じ意味である。",img:"images/q12.png",a:false,e:"信号機の赤と同じ意味です。"},
+/* 12 */ {q:"この標識のある道路では、自動二輪車は通行できないが原動機付自転車は通行することができる。",img:"images/q12.png",a:false,e:"「二輪の自動車・原動機付き自転車通行止め」です。自動二輪車の他に原動機付自転車も規制の対象になります。"},
 /* 13 */ {q:"この標識のある道路では、運転経歴にかかわらず、大型自動二輪車及び普通自動二輪車での、二人乗り通行を禁止している。",img:"images/q13.png",a:true,e:"問題文の通りです。「大型自動二輪車及び普通自動二輪車二人乗り通行禁止」です。 "},
 /* 14 */ {q:"この標識は、路線バス等の優先通行帯を示すもので、路線バスが近づいたときは、ほかの自動車は速やかにその通行帯から出なければならない。",img:"images/q14.png",a:true,e:"問題文の通りです。"},
 /* 15 */ {q:"この標識のある通行帯では、指定された車以外の車（小型特殊自動車、原動機付自転車、軽車両を除く）は左折や工事などでやむを得ない場合のほかは通行することができない。",img:"images/q15.png",a:true,e:"問題文の通りです。"},
@@ -91,7 +91,7 @@ const questions = [
 /* 28 */ {q:"この表示は、道路中央寄り右側部分にはみ出して追い越すときは、対向車に注意しなければならないことを示している。",img:"images/q28.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」です。追い越しのため道路の右側部分にはみ出して通行してはいけません。"},
 /* 29 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q29.png",a:true,e:"問題文の通りです。"},
 /* 30 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q30.png",a:true,e:"問題文の通りです。"},
-/* 31 */ {q:"この標識があるときは、前方の信号が赤や黄であっても、周りの交通に注意しながら左折することができる。",img:"images/q31.png",a:false,e:"「一方通行」です。車は矢印の方向の示す反対方向には通行できません。"},
+/* 31 */ {q:"これは、左折可を示す標示板である。",img:"images/q31.png",a:false,e:"「一方通行」です。車は矢印の方向の示す反対方向には通行できません。"},
 /* 32 */ {q:"この標識があるときは、前方の信号が赤や黄であっても、周りの交通に注意しながら左折することができる。",img:"images/q32.png",a:true,e:"問題文の通りです。"},
 /* 33 */ {q:"この標識は、車は道路の右側部分にはみ出して追い越すことができる。",img:"images/q33.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」です。車は、道路の右側部分にはみ出して追い越しをしてはいけません。"},
 /* 34 */ {q:"この標識は、車は、一般原動機付自転車を追い越すため進路を変えたり、その横を通り過ぎたりしてはならない。",img:"images/q34.png",a:true,e:"問題文の通りです。「追い越し禁止」です。すべての追い越し行為が禁止されています。"},
@@ -103,8 +103,8 @@ const questions = [
 /* 40 */ {q:"この標識のあるところでは，自動車は停止してはならない。",img:"images/q40.png",a:false,e:"「停車可」です。車は、停車することができます。。"},
 /* 41 */ {q:"この標識は、駐車禁止を示している。",img:"images/q41.png",a:false,e:"「駐車可」です。車は、駐車することができます。"},
 /* 42 */ {q:"この標識は、標章の交付受けた高齢運転者等が運転する普通自動車が標章を掲示することで停車できることを示している。",img:"images/q42.png",a:true,e:"問題文の通りです。「高齢運転者等標章自動車停車可」です。"},
-/* 43 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q43.png",a:true,e:"問題文の通りです。"},
-/* 44 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q44.png",a:true,e:"問題文の通りです。"},
+/* 43 */ {q:"この標識のある場所を通行するとき、横断する歩行者がいないか注意しながら進んだ。",img:"images/q43.png",a:true,e:"問題文の通りです。「横断歩道」です。"},
+/* 44 */ {q:"この標識がある道路では普通乗用自動車のみが軌道敷内を通行することができる。",img:"images/q44.png",a:false,e:"補助標識で「普通乗用自動車のみ」と指定されていなければ、基本的に自動車全般が通行可能です。"},
 /* 45 */ {q:"交差点の手前にこの標識がある場合は、自分の通行している道路が「優先道路」であることを示している。",img:"images/q45.png",a:true,e:"問題文の通りです。"},
 /* 46 */ {q:"この標識は、この先の道路の道幅が狭くなっていることを示している。",img:"images/q46.png",a:true,e:"問題文の通りです。「幅員減少」です。"},
 /* 47 */ {q:"この表示は、その場所が「転回禁止」の終わりであることを示している。",img:"images/q47.png",a:false,e:"「転回禁止」です。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
