--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ const questions = [
 /* 26 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q26.png",a:true,e:"問題文の通りです。"},
 /* 27 */ {q:"この標識は、この先で左から道路が合流してくることを示している。",img:"images/q27.png",a:true,e:"問題文の通りです。"},
 /* 28 */ {q:"この表示は、道路中央寄り右側部分にはみ出して追い越すときは、対向車に注意しなければならないことを示している。",img:"images/q28.png",a:false,e:"「追い越しのための右側部分はみ出し通行禁止」です。追い越しのため道路の右側部分にはみ出して通行してはいけません。"},
-/* 29 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q29.png",a:true,e:"問題文の通りです。"},
+/* 29 */ {q:"この標識は、自動車と原動機付自転車の最高速度が時速50キロメートルであることを示している。",img:"images/q29.png",a:false,e:"最高速度が50キロの標識でも、原動機付自転車は、時速30キロメートルを超えてはいけません。"},
 /* 30 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q30.png",a:true,e:"問題文の通りです。"},
 /* 31 */ {q:"これは、左折可を示す標示板である。",img:"images/q31.png",a:false,e:"「一方通行」です。車は矢印の方向の示す反対方向には通行できません。"},
 /* 32 */ {q:"この標識があるときは、前方の信号が赤や黄であっても、周りの交通に注意しながら左折することができる。",img:"images/q32.png",a:true,e:"問題文の通りです。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
