--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ const questions = [
 /* 36 */ {q:"この標識がある区間内の見通しがきかない交差点、曲がり角、上り坂の頂上付近では、警音器を鳴らす必要がある。",img:"images/q36.png",a:true,e:"問題文の通りです。「警笛区間」の標識です。"},
 /* 37 */ {q:"この標識は、すべりやすいので注意しなければならないことを示している。",img:"images/q37.png",a:false,e:"「右（左）つづら折りあり」です。山道などでよく見られるような、右方向（左方向）への急なカーブが連続して続く「ジグザグ道」になっていることを示す標識です。この標識を見たら、連続するカーブに備えて速度を落とし、慎重にハンドル操作をする必要があります。"},
 /* 38 */ {q:"これは高齢者マークであり、７０歳以上の高齢運転者は、普通自動車を運転する場合、その車の前と後ろの定められた位置につけるようにした方がよい。",img:"images/q38.png",a:true,e:"問題文の通りです。"},
-/* 39 */ {q:"この標識は、その他の危険を表しており、この先警戒すべきことがあることを示している。",img:"images/q39.png",a:true,e:"問題文の通りです。"},
+/* 39 */ {q:"これは聴覚に障害のある運転者が、準中型自動車または普通自動車を運転するときに付けるマークである。",img:"images/q39.png",a:true,e:"問題文の通りです。「聴覚障がい者標識」です。"},
 /* 40 */ {q:"この標識のあるところでは，自動車は停止してはならない。",img:"images/q40.png",a:false,e:"「停車可」です。車は、停車することができます。。"},
 /* 41 */ {q:"この標識は、駐車禁止を示している。",img:"images/q41.png",a:false,e:"「駐車可」です。車は、駐車することができます。"},
 /* 42 */ {q:"この標識は、標章の交付受けた高齢運転者等が運転する普通自動車が標章を掲示することで停車できることを示している。",img:"images/q42.png",a:true,e:"問題文の通りです。「高齢運転者等標章自動車停車可」です。"},
@@ -177,6 +177,7 @@ showQuestion();
 
 </body>
 </html>
+
 
 
 
